[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interface/settings_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/pause_menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/main_menu/background.jpg" type="Texture" id=7]
[ext_resource path="res://interface/main_menu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 40.0
margin_right = -320.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 560.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "STYX"
align = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 320.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_top = 128.0
margin_right = 320.0
margin_bottom = 168.0
rect_min_size = Vector2( 170, 40 )
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_top = 178.0
margin_right = 320.0
margin_bottom = 218.0
rect_min_size = Vector2( 170, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_top = 228.0
margin_right = 320.0
margin_bottom = 268.0
rect_min_size = Vector2( 170, 40 )
focus_neighbour_bottom = NodePath("../NewGame")
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
